k8s-manifests/secrets.yml
apiVersion: v1
kind: Namespace
metadata:
  name: argus
