k8s-manifests/auth-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc
  namespace: argus
spec:
  replicas: 2
  selector:
    matchLabels: {app: auth-svc}
  template:
    metadata:
      labels: {app: auth-svc}
    spec:
      serviceAccountName: argus-sa
      containers:
        - name: auth-svc
          image: 844074033173.dkr.ecr.ap-south-1.amazonaws.com/argus/auth-svc:latest
          imagePullPolicy: Always
          ports: [{containerPort: 8000}]
          readinessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 15
          resources:
            requests: {cpu: "100m", memory: "256Mi"}
            limits: {cpu: "500m", memory: "512Mi"}
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: argus
spec:
  selector: {app: auth-svc}
  ports: [{port: 8000, targetPort: 8000}]
