k8s-manifests/postgre.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: argus
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels: {app: postgres}
  template:
    metadata:
      labels: {app: postgres}
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports: [{containerPort: 5432}]
          volumeMounts:
            - {name: pgdata, mountPath: /var/lib/postgresql/data}
            - {name: init-script, mountPath: /docker-entrypoint-initdb.d}
      volumes:
        - name: init-script
          configMap: {name: postgres-init}
  volumeClaimTemplates:
    - metadata: {name: pgdata}
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2-retain
        resources: {requests: {storage: 5Gi}}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: argus
spec:
  selector: {app: postgres}
  ports: [{port: 5432, targetPort: 5432}]
